statum-macros/tests/ui/invalid_machine_no_state_generic.rs
extern crate statum;
use statum::machine;

#[machine]
struct Machine {
    client: String,
}
